--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,10 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - install
-
+      - install:
+          filters:
+            tags:
+              only: /.*/
       - release:
           requires:
             - install
