--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "email": "lisowski54@gmail.com"
   },
   "main": "github-markdown.css",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "engines": {
     "node": ">=0.10.0"
   },
